--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,8 @@
 }
 
 .bg-first{
-    background-image: url("https://wallpapercave.com/wp/wp2809117.jpg");
+    background-image: url("../images/screen.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
