--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,5 +13,5 @@
     background-image: url("../images/screen.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
